# VRecog

./: .gitignore  CMakeLists.txt  README.md  setup.py
app/: classification.py
include/: formant_module.h
src/: fomant_module_interface.cpp  formant_module_impl.cpp
test/: test_formant.py
